plugins {
	id 'org.springframework.boot' version '2.6.7'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.capstone'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}
jar{
	enabled=false
}
repositories {
	mavenCentral()
}

dependencies {
//	implementation "io.jsonwebtoken:jjwt:0.9.1"
	implementation 'com.fasterxml.jackson.core:jackson-databind' //JSON Parser
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
//	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'com.googlecode.json-simple:json-simple:1.1.1'

	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.1'
	implementation group: 'com.auth0', name: 'java-jwt', version: '3.10.2'

}

tasks.named('test') {
	useJUnitPlatform()
}

task('release'){
	dependsOn("build")

	doLast{
		def stdout = new ByteArrayOutputStream()

		exec {
			commandLine 'eb', 'setenv', 'SPRING_PROFILES_ACTIVE=prod'
			standardOutput = stdout
		}
		println "eb setenv Spring_profiles_active=prod :\n$stdout"
		exec {
			commandLine 'eb','deploy'
			standardOutput = stdout
		}
		println "eb deploy :\n$stdout"
		println "relase succe";
	}
}